--- a/pgs/about.html
+++ b/pgs/about.html
@@ -14,7 +14,7 @@
       <td>Меню:</td>
     </tr>
     <tr>
-      <td align="center"><a href="../index.html">Главная</a><td>
+      <td align="center"><a class="ss" href="../index.html">Главная</a><td>
     </tr>
   </table>
   <hr />
