--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div align="center">
   <h1 class="zag">Главная</h1>
   <hr />
-  <table class="tab" border="2">
+  <table class="tab">
     <tr>
       <td>Меню:</td>
     </tr>
