--- a/pgs/about.html
+++ b/pgs/about.html
@@ -9,7 +9,7 @@
     <div align="center">
   <h1 class="zag">Обо мне</h1>
   <hr />
-  <table class="tab" border="2">
+  <table class="tab">
     <tr>
       <td>Меню:</td>
     </tr>
