--- a/pgs/about.html
+++ b/pgs/about.html
@@ -6,7 +6,7 @@
     <title>FBGM | Обо мне</title>
   </head>
   <body>
-    <div align="center">
+    <div class="main">
   <h1 class="zag">Обо мне</h1>
   <hr />
   <table class="tab">
