--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
   </div>
   <p class="zaz"> Тыкай по ссылкам </p>
   <hr />
-  <p class="par" align="center">Это сайт <a class="url" href="https://youtube.com/channel/UCAyE0u3b1YtQ3aqUuH6BSBA" target="_blank">канала FBGM</a></p>
+  <p class="par">Это сайт <a class="url" href="https://youtube.com/channel/UCAyE0u3b1YtQ3aqUuH6BSBA" target="_blank">канала FBGM</a></p>
 </body>
 </html>
