--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <td>Меню:</td>
     </tr>
     <tr>
-      <td align="center"><a class="ss" href="pgs/about.html">Обо мне</a><td>
+      <td><a class="ss" href="pgs/about.html">Обо мне</a><td>
     </tr>
   </table>
   <hr />
