--- a/pgs/about.html
+++ b/pgs/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
@@ -14,13 +14,13 @@
       <td>Меню:</td>
     </tr>
     <tr>
-      <td align="center"><a class="ss" href="../index.html">Главная</a><td>
+      <td><a class="ss" href="../index.html">Главная</a><td>
     </tr>
   </table>
   <hr />
   <br />
   </div>
-  <p class="am" align="center">Я самый обычный человек. Ничего особенного во мне нету.</p>
+  <p class="am">Я самый обычный человек. Ничего особенного во мне нету.</p>
   <hr />
   <p class="par" align="center">Это сайт <a class="url" href="https://youtube.com/channel/UCAyE0u3b1YtQ3aqUuH6BSBA" target="_blank">канала FBGM</a></p>
     
