--- a/pgs/about.html
+++ b/pgs/about.html
@@ -22,7 +22,7 @@
   </div>
   <p class="am">Я самый обычный человек. Ничего особенного во мне нету.</p>
   <hr />
-  <p class="par" align="center">Это сайт <a class="url" href="https://youtube.com/channel/UCAyE0u3b1YtQ3aqUuH6BSBA" target="_blank">канала FBGM</a></p>
+  <p class="par">Это сайт <a class="url" href="https://youtube.com/channel/UCAyE0u3b1YtQ3aqUuH6BSBA" target="_blank">канала FBGM</a></p>
     
   </body>
 </html>
