--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="main">
   <h1 class="zag">Главная</h1>
   <hr />
-  <table class="tab">
+  <table class="tab" align="center">
     <tr>
       <td>Меню:</td>
     </tr>
