--- a/pgs/about.html
+++ b/pgs/about.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <title>FBGM | Обо мне</title>
   </head>
