--- a/pgs/about.html
+++ b/pgs/about.html
@@ -10,7 +10,7 @@
     <div class="main">
   <h1 class="zag">Обо мне</h1>
   <hr />
-  <table class="tab">
+  <table class="tab" align="center">
     <tr>
       <td>Меню:</td>
     </tr>
